horario/leitor/HorarioLeitor.jj
options {
  LOOKAHEAD = 5;
}

PARSER_BEGIN(HorarioLeitor)
package horario.leitor;

import java.io.*;
import horario.horario.*;

public class HorarioLeitor {
  static Horario horario;
  static Cadeira cadeira;
  static Turno turno;
/*
Aceitar horarios sem sala
Aceitar horarios sem turmas
  e sem salas nem turmas
*/
}
PARSER_END(HorarioLeitor)

TOKEN : { < SALA : "1 - 1"|"1 - 11"|"1 - 12"|"1 - 15"|"1 - 17"|"1 - 19"|"1 - 2"|"1 - 22"|"1 - 24"|"1 - 26"|"1 - 27"|"1 - 28"|"1 - 29"|"1 - 3"|"1 - 30"|"1 - 31"|"1 - 32"|"1 - 4"|"1 - 63"|"1 - 65"|"1 - 75"|"0 - 13"|"0 - 14"|"0 - 15"|"0 - 16"|"0 - 17"|"0 - 19"|"0 - 21"|"0 - 23"|"0 - 25"|"0 - 26"|"0 - 27"|"0 - 5"|"0 - 65"|"0 - 67"|"0 - 9"|"A1"|"A2"|"A3"|"A4"|"A5"|"AM"|"C01"|"C10"|"C11"|"C12"|"C13"|"C22"|"C9"|"E .O"|"E .O - A"|"E .O - B"|"E .O - C"|"E .O - D"|"E1"|"E2"|"E3"|"E4"|"E5"|"E8"|"EA1"|"EA2"|"EA3"|"EA4"|"EA5"|"EN1"|"F1"|"F2"|"F3"|"F4"|"F5"|"F8"|"FA1"|"FA2"|"FA3"|"GA1"|"GA2"|"GA3"|"GA4"|"GA5"|"I1"|"I10"|"I3"|"I5"|"I6"|"I8"|"I9"|"L .I .E"|"LAB 1"|"LAB 10"|"LAB 11"|"LAB 12"|"LAB 13"|"LAB 14"|"LAB 6"|"LAB 7"|"LAB 8"|"LAB 9"|"LAB. IM"|"LB Labº Bio-Engenharia"|"LCB Labº de Ciências Biológicas"|"LCB1"|"LCB1A"|"LCB1B"|"LE1"|"LE2"|"LE3"|"LER Labº Engª das Reacções"|"LJF"|"LPT"|"LQA Labº Química Analítica"|"LQI Labº Química Inorgânica"|"LSD1"|"LSD2"|"LSD4"|"LSDC1"|"LSDC2"|"LSDC5"|"LT1"|"LT2"|"LT4"|"LT5"|"Lab. FE"|"Lab. IA"|"Lab. ME"|"Lab. Topografia"|"Laboratório de Geologia"|"MOM"|"P1"|"P10"|"P12"|"P13"|"P3"|"P6"|"P7"|"P8"|"P9"|"PA1"|"PA2"|"Q4.1"|"Q4.2"|"Q4.4"|"Q4.5"|"Q4.6"|"Q4.7"|"Q5.1"|"Q5.2/Apoio Informático"|"Q5.3"|"QA"|"QA02.1"|"QA02.2"|"QA02.3"|"QA02.4"|"QA1.1"|"QA1.2"|"QA1.3"|"QA1.4"|"SDM"|"Salão Nobre"|"T .E .M"|"V0.01"|"V0.02"|"V0.03"|"V0.04"|"V0.06"|"V0.07"|"V0.08"|"V0.09"|"V0.10"|"V0.11"|"V0.12"|"V0.13"|"V01.14"|"V01.16"|"V1.07"|"V1.08"|"V1.09"|"V1.10"|"V1.11"|"V1.12"|"V1.13"|"V1.14"|"V1.15"|"V1.16"|"V1.17"|"V1.20.1"|"V1.20.3"|"V1.23"|"V1.24"|"V1.25"|"V1.26"|"V1.27"|"V1.28"|"V1.29"|"V1.30"|"V1.31"|"V1.32"|"V1.33"|"V1.34"|"V1.35"|"V1.36"|"V1.37"|"V1.38"|"V1.39"|"V1.40"|"V1.41"|"VA1"|"VA2"|"VA3"|"VA4"|"VA5"|"VA6"|"L.F.E.B - A"|"01.25" > }
TOKEN : { < SPACE : (" " | "\n" | "\r" | "\t")+ > }
TOKEN : { < DIA : "Seg" | "Ter" | "Qua" | "Qui" | "Sex" > }
TOKEN : { < T2PNT : ":" > }
TOKEN : { < T1NUM : <NUM> > }
TOKEN : { < T2NUM : <NUM><NUM> > }
TOKEN : { < CADEIRA : <NOME1><NOME2><TIPO><TURNO> > }
TOKEN : { < #NOME1 : (["A"-"Z"]|["a"-"z"])+ > }
TOKEN : { < #NOME2 : (["A"-"Z"]|["a"-"z"]|"-"|["0"-"9"])* > }
TOKEN : { < #TIPO : "T" | "P" | "PB" | "L" > } /*T  P  L  TP  TC  Pb  S  E  OT*/
TOKEN : { < #TURNO : <NUM><NUM> > }
TOKEN : { < TURMA : (["A"-"Z"]|["a"-"z"]|"-")+ <NUM><NUM> (["A"-"Z"])* <NUM><NUM> > }
TOKEN : { < #NUM : ["0"-"9"] > }


Horario lerHorario() throws NumberFormatException :
{
}
{
  {horario = new Horario();}
  R1()
    <EOF>
  {return horario;}
}

void R1() throws NumberFormatException :
{
}
{
    (
    (
      <SPACE>
      R2()
    )
    |
    (
      lerCadeira()
      <SPACE>
      R5()
      R4()
      R3()
    )
    )?
}

void R2() throws NumberFormatException :
{
}
{
  (
      lerCadeira()
      <SPACE>
      R5()
      R4()
      R3()
  )?
}

void R3() throws NumberFormatException :
{
}
{
  (
      <SPACE>
  )?
}

void R4() throws NumberFormatException :
{
}
{
  (
      <SPACE>
      lerCadeira()
      <SPACE>
      R5()
      R4()
  )?
}

void R5() throws NumberFormatException :
{
}
{
  (
    lerAula()
    R6()
  )
    |
    (
      lerTurma()
      R6()
    )
}

void R6() throws NumberFormatException :
{
}
{
  (
      <SPACE>
      R5()
  )?
}

void lerCadeira() throws NumberFormatException :
{
  Token idC;
}
{
  idC = <CADEIRA>
  {
    cadeira = Cadeira.novaCadeira(idC.image);
    horario.adicionaCadeira(cadeira);
    turno = new Turno(idC.image);
    cadeira.adicionaTurno(turno);
  }
    
}

void lerAula() throws NumberFormatException :
{
  Token dia;
  Token inicioHora, inicioMinuto;
  Token fimHora, fimMinuto;
  Token sala;
Sala s= new Sala();
}
{
  dia = <DIA>
    <SPACE>
    
    inicioHora = <T2NUM>
    <T2PNT>
    inicioMinuto = <T2NUM>
    <SPACE>
    
    fimHora = <T2NUM>
    <T2PNT>
    fimMinuto = <T2NUM>
(    
    <SPACE>

    sala = <SALA>
{s = new Sala(sala.image);}
)?

  {turno.adicionaAula(new Aula(new Dia(dia.image),
                   new Tempo(new Hora(Integer.parseInt(inicioHora.image),
                                      Integer.parseInt(inicioMinuto.image)),
                             new Hora(Integer.parseInt(fimHora.image),
                                      Integer.parseInt(fimMinuto.image))),
                               s));}
}

void lerTurma() throws NumberFormatException :
{
  Token token;
}
{
  token = <TURMA>
  {turno.adicionaTurma(new Turma(token.image));}
}
